# majalis

./: .env.example  .gitignore  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
dashboard/: index.html  index.zh.html  live.html  live.zh.html
data/: action_wm_heldout.jsonl  action_wm_heldout.jsonl.doneseeds.json  action_wm_train.jsonl  action_wm_train.jsonl.doneseeds.json  calibration_pairs.jsonl  gate_calibration.json  gate_calibration_learned.json  mmlu_test.jsonl  wm_action_weights.json  wm_hazard_weights.json  wm_weights.json
docs/: DEMO_SCRIPT.md  architecture.md  deploy-alicloud.md  index.html  submission.md
docs/paper/: agora.md  majalis.md
examples/: quickstart.py  sample_trace.jsonl
experiments/gate-cost/: journal.jsonl  program.md  target.py
results/: action_wm_mining_spend_state.json  gsm8k_results.json  gsm8k_spend_state.json  imagination_frontier.json  mmlu_results.json  mmlu_spend_state.json  offline_gate_eval.json  replay_s0.json  session_summary.json  summary_s0.json  wm_action_eval.json
results/raw/: gsm8k_majalis-gated_s0.jsonl  gsm8k_single_s0.jsonl  session_majalis-maintain_s0_t8.jsonl  session_majalis-maintain_s1_t8.jsonl  session_majalis-maintain_s2_t8.jsonl  session_majalis-maintain_s3_t8.jsonl  session_majalis-maintain_s4_t8.jsonl  session_majalis-maintain_s5_t8.jsonl  session_majalis-maintain_s6_t8.jsonl  session_majalis-nodebate_s0_t8.jsonl  session_majalis-nodebate_s1_t8.jsonl  session_majalis-nodebate_s2_t8.jsonl  session_majalis-nodebate_s3_t8.jsonl  session_majalis-nodebate_s4_t8.jsonl  session_majalis-nodebate_s5_t8.jsonl  session_majalis-nodebate_s6_t8.jsonl  session_majalis-wm-plan_s0_t8.jsonl  session_majalis-wm-plan_s10_t8.jsonl  session_majalis-wm-plan_s11_t8.jsonl  session_majalis-wm-plan_s12_t8.jsonl  session_majalis-wm-plan_s13_t8.jsonl  session_majalis-wm-plan_s14_t8.jsonl  session_majalis-wm-plan_s15_t8.jsonl  session_majalis-wm-plan_s16_t8.jsonl  session_majalis-wm-plan_s17_t8.jsonl  session_majalis-wm-plan_s18_t8.jsonl  session_majalis-wm-plan_s19_t8.jsonl  session_majalis-wm-plan_s1_t8.jsonl  session_majalis-wm-plan_s2_t8.jsonl  session_majalis-wm-plan_s3_t8.jsonl  session_majalis-wm-plan_s4_t8.jsonl  session_majalis-wm-plan_s5_t8.jsonl  session_majalis-wm-plan_s6_t8.jsonl  (+26 more)
scripts/: build_dashboard.py  build_live.py  dashboard_panels.py  demo.sh  demo_company.py  e2e_live.py  extract_astryx_tokens.py  gen_action_wm_dataset.py  gen_sample_trace.py  gen_wm_dataset.py  gsm8k_bench.py  imagine_plan.py  mmlu_bench.py  offline_bench.py  record_session.py  refit_gate_learned.py  smoke_test.py  translate_zh.py
src/agora/: __init__.py  (+8 more)
tests/: test_beliefs.py  test_bench.py  test_bench_session.py  test_cli.py  test_evidence_artifacts.py  test_gen_action_wm_dataset.py  test_gsm8k.py  test_live_api.py  test_llm.py  test_maintain.py  test_mmlu.py  test_offline_bench.py  test_society.py  test_stream.py  test_wm.py  test_wm_hazard.py  test_wm_plan.py  test_zh.py
train/: train_action_wm.py  train_wm.py  train_wm_hazard.py
web/: agora-skin.css  astryx-tokens.css  figtree.css  majalis-skin.css
(+30 files in other folders)
