[project]
name = "agora"
version = "0.1.0"
description = "A world-model-modulated debate society: a shared calibrated belief state decides when debate is worth the tokens, who speaks, when to stop, and what to commit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anas", email = "anaselghoudane@gmail.com" }]
dependencies = [
    "openai>=1.40",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agora"]
