[project]
name = "majalis"
version = "0.1.0"
description = "A world-model-modulated debate society: a shared calibrated belief state decides when debate is worth the tokens, who speaks, when to stop, and what to commit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Anas", email = "anaselghoudane@gmail.com" }]
dependencies = [
    "openai>=1.40",
    "numpy>=1.26",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8", "majalis[api]"]  # dev pulls the API deps so the full suite (incl. tests/test_live_api.py) runs

[project.scripts]
majalis = "majalis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/majalis"]
